--- a/angular-phonecat/app/index.html
+++ b/angular-phonecat/app/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="app.animations.css" />
+    <link rel="stylesheet" href="demos/index.css" />
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
@@ -23,6 +24,9 @@
     <script src="phone-list/phone-list.component.js"></script>
     <script src="phone-detail/phone-detail.module.js"></script>
     <script src="phone-detail/phone-detail.component.js"></script>
+    <script src="demos/index.js"></script>
+    <script src="demos/index.module.js"></script>
+    <script src="demos/index.js"></script>
   </head>
   <body>
 
